--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
     "clsx": "^2.0.0-next.0",
     "lucide-react": "^0.544.0",
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-responsive-carousel": "^3.2.23",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
