--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.64.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-toastify": "^11.0.5",
     "swiper": "^12.0.2",
     "tailwind-merge": "^3.3.1",
-    "zod": "^4.1.11"
+    "zod": "^4.1.11",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
