--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/react": "^2.8.5",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-select": "^2.2.6",
     "clsx": "^2.0.0-next.0",
+    "framer-motion": "^12.23.24",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.544.0",
     "next": "15.4.5",
     "react": "19.1.0",
