--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "10.3.10",
     "@nestjs/config": "3.2.3",
     "@nestjs/core": "10.3.10",
@@ -35,7 +36,9 @@
     "bcrypt": "5.1.1",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
+    "handlebars": "^4.7.8",
     "mongoose": "8.5.1",
+    "nodemailer": "^7.0.10",
     "reflect-metadata": "0.2.2",
     "rxjs": "7.8.1"
   },
@@ -47,6 +50,7 @@
     "@types/express": "4.17.21",
     "@types/jest": "29.5.12",
     "@types/node": "20.14.12",
+    "@types/nodemailer": "^7.0.3",
     "@types/supertest": "6.0.2",
     "@typescript-eslint/eslint-plugin": "7.17.0",
     "@typescript-eslint/parser": "7.17.0",
