--- a/server/package.json
+++ b/server/package.json
@@ -24,33 +24,43 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs-modules/mailer": "^2.0.2",
+    "@nestjs-modules/mailer": "2.0.2",
     "@nestjs/common": "10.3.10",
     "@nestjs/config": "3.2.3",
     "@nestjs/core": "10.3.10",
-    "@nestjs/jwt": "^11.0.1",
+    "@nestjs/jwt": "11.0.1",
     "@nestjs/mapped-types": "2.0.5",
     "@nestjs/mongoose": "10.0.10",
+    "@nestjs/passport": "11.0.5",
     "@nestjs/platform-express": "10.3.10",
+    "@nestjs/swagger": "8.1.1",
     "api-query-params": "5.4.0",
     "bcrypt": "5.1.1",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
-    "handlebars": "^4.7.8",
+    "dayjs": "1.11.19",
+    "handlebars": "4.7.8",
     "mongoose": "8.5.1",
-    "nodemailer": "^7.0.10",
+    "nodemailer": "7.0.10",
+    "passport": "0.7.0",
+    "passport-jwt": "4.0.1",
+    "passport-local": "1.0.0",
     "reflect-metadata": "0.2.2",
-    "rxjs": "7.8.1"
+    "rxjs": "7.8.1",
+    "swagger-themes": "^1.4.3",
+    "uuid": "13.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "10.4.2",
     "@nestjs/schematics": "10.1.3",
     "@nestjs/testing": "10.3.10",
-    "@types/bcrypt": "^5.0.2",
+    "@types/bcrypt": "5.0.2",
     "@types/express": "4.17.21",
     "@types/jest": "29.5.12",
     "@types/node": "20.14.12",
-    "@types/nodemailer": "^7.0.3",
+    "@types/nodemailer": "7.0.3",
+    "@types/passport-jwt": "4.0.1",
+    "@types/passport-local": "1.0.38",
     "@types/supertest": "6.0.2",
     "@typescript-eslint/eslint-plugin": "7.17.0",
     "@typescript-eslint/parser": "7.17.0",
